.. Author notes: this file is formatted with restructured text
(http://docutils.sourceforge.net/docs/user/rst/quickstart.html).
The changelog style is adapted from Apache Lucene.

Note that ``PHAB_ID=#`` and ``RB_ID=#`` correspond to associated messages in commits.

Unreleased

18.8.0  2018-08-06

Bug Fixes:

  * util-core: Fixed an issue with Future.joinWith where it waits for
    completion of both futures even if one has failed. This also affects
    the join method, which is implemented in terms of joinWith. ``PHAB_ID=D191342``

18.7.0  2018-07-10

API Changes:

  * util-core: Local.Context used to be a type alias for Array[Option[_]], now it is
    a new key-value liked structure. ``PHAB_ID=D182478``

18.6.0  2018-06-14

API Changes:

  * util-app: Allow users a way to override the argument parsing behavior in
    `c.t.app.App#nonExitingMain` which was inlined. Users can override `parseArgs`
    to define custom behavior. ``PHAB_ID=D181660``

  * util-core: Removed `c.t.u.NonFatal`, use `scala.util.control.NonFatal`
    instead. ``PHAB_ID=D181918``

  * util-class-preloader: This library has been removed since it deprecated. We
    no longer recommend that people do this. ``PHAB_ID=D174250``

Bug Fixes:

  * util-app: Fix issue where in some environments, `URLClassLoader#getURLs` can
    return null, failing LoadService from initializing properly
    (see: https://github.com/google/guava/issues/2239). The `URLClassLoader` javadoc
    is not clear if a null can be returned when calling `URLClassLoader#getURLs` and for
    at least one application server, the default returned is null, thus we should be more
    resilient against this possibility. Fixes Finagle #695. ``PHAB_ID=D181152``

Deprecations:

  * util-reflect: This library has been deprecated since it is legacy code and shouldn't
    be used for new services. We no longer think this facility is the right way to do it
    and encourage you to provide your own forwarders. ``PHAB_ID=D174250``
