@@ -6,6 +6,12 @@ Note that ``PHAB_ID=#`` and ``RB_ID=#`` correspond to associated messages in com
 
 Unreleased
 
+API Changes:
+
+  * util-core: `c.t.io.Reader` and `c.t.io.Writer` are now abstracted over the type
+    they produce/consume (`Reader[A]` and `Writer[A]`) and are no longer fixed to `Buf`.
+    ``PHAB_ID=D195638``
+
 18.8.0  2018-08-06
 
 Bug Fixes:
